RESOLVED FIXED20671
JavaScriptCore string manipulation spends too much time in memcpy
https://bugs.webkit.org/show_bug.cgi?id=20671
Summary JavaScriptCore string manipulation spends too much time in memcpy
Darin Adler
Reported 2008-09-05 12:28:46 PDT
I was poking around and discovered that we spent so much time in memcpy that doing a little micro-optimization will help.
Attachments
patch (11.72 KB, patch)
2008-09-05 12:34 PDT, Darin Adler
sam: review+
Darin Adler
Comment 1 2008-09-05 12:34:53 PDT
Darin Adler
Comment 2 2008-09-05 14:51:39 PDT
Committed revision 36117.
Note You need to log in before you can comment on or make changes to this bug.